[package]
name = "teleport"
version = "0.1.0"
edition = "2018"
authors = [
    "Denis Kolodin <deniskolodin@gmail.com>",
    "overfloat <rillrate@gmail.com>",
]
repository = "https://github.com/rate-technology/teleport"
homepage = "https://github.com/rate-technology/teleport"
description = "rill-based live telemetry tool"
categories = ["development-tools::debugging"]
keywords = ["logging"]
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.34"
clap = "3.0.0-beta.2"
env_logger = "0.8.2"
futures = "0.3.8"
log = "0.4.11"
regex = "1.4.2"
rill = "0.5.0"
strum = "0.20.0"
strum_macros = "0.20.1"
thiserror = "1.0.22"
tokio = { versio = "0.3.5", features = ["full"] }
