[package]
name = "teleport"
version = "0.19.0"
edition = "2018"
authors = [
    "Denis Kolodin <deniskolodin@gmail.com>",
    "overfloat <rillrate@gmail.com>",
]
repository = "https://github.com/rate-technology/teleport"
homepage = "https://github.com/rate-technology/teleport"
description = "rill-based live telemetry tool"
categories = ["development-tools::debugging"]
keywords = ["logging"]
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.38"
async-stream = "0.3.0"
async-trait = "0.1.42"
clap = "3.0.0-beta.2"
derive_more = "0.99.11"
env_logger = "0.8.2"
futures = "0.3.12"
log = "0.4.14"
meio = "0.74.5"
notify = "5.0.0-pre.5"
prometheus-parser = { git = "ssh://git@github.com/rate-technology/prometheus-parser.git" }
regex = "1.4.3"
reqwest = "0.11.0"
rillrate = "0.19.2"
thiserror = "1.0.23"
tokio = { version = "1.2.0", features = ["full"] }
